# franknpython

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
franknpython/: __init__.py  helpers_code.py  helpers_io.py
franknpython/operations/: __init__.py  __main__.py  base.py
scripts/: run_operations.py
src/franknpython/: __init__.py  __main__.py  helpers_base.py  helpers_code.py  helpers_encoder.py
temp/: code_ser.py
tests/: test_code_serialization.py  test_main.py
