[tool.poetry]
name = "franknpython"
version = "0.1.0"
description = "Running application parts async with different python interpreters"
license = "MIT"
authors = ["tommmlij <tommmlij@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tommmlij/franknpython"

[tool.poetry.urls]
"GitHub: issues" = "https://github.com/tommmlij/franknpython/issues"
"GitHub: repo" = "https://github.com/tommmlij/franknpython"


[tool.poetry.dependencies]
python = ">=3.8 <=3.12"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(v|test)((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"