[tool.poetry]
name = "franknpython"
version = "0.1.0"
description = "Running application parts async with different python interpreters"
license = "MIT"
authors = ["tommmlij <tommmlij@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tommmlij/franknpython"
packages = [{ include = "franknpython", from = "src" }]

[tool.poetry.urls]
"GitHub: issues" = "https://github.com/tommmlij/franknpython/issues"
"GitHub: repo" = "https://github.com/tommmlij/franknpython"


[tool.poetry.dependencies]
python = ">=3.8.1 <=3.12"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(v|test)((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"